# nCPU

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
benchmarks/: benchmark_arm64.py  benchmark_compute.py  benchmark_crypto_sidechannel.py  benchmark_multiprocess.py  benchmark_neural.py  benchmark_neuros.py  benchmark_selfhost.py  benchmark_sidechannel.py  compute_results.json  eval_results.json  eval_workloads.py  multiprocess_results.json  results.json  selfhost_results.json  sidechannel_results.json
demos/: alpine_gpu.py  arm64_game_of_life.py  busybox.elf  busybox_gpu_demo.py  doom_raycaster.py  gpu_pipeline_demo.py  meta_compile_demo.py  neuros_demo.py  self_compile_demo.py
docs/: MODELS.md  SOME_COMPLETE_GUIDE.md  WEIGHT_CPU_ARCHITECTURE.md  architecture.md
examples/: demo_model_cpu.py  demo_neural_cpu.py  demo_tensor_cpu.py
models/: MODEL_INDEX.md
ncpu/: __init__.py
paper/: ncpu_paper.md
programs/: absolute_value.asm  all_nops.asm  arithmetic_series.asm  array_sum.asm  average.asm  binary_to_bcd.asm  bit_rotate_left.asm  bitfield_extract.asm  bitmask_create.asm  bitwise.asm  bubble_sort_step.asm  clamp.asm  collatz.asm  compare_and_swap.asm  count_bits_set.asm  count_down_by_three.asm  count_leading_zeros.asm  divmod.asm  eforth.dec  euclidean_distance_sq.asm  factorial.asm  fibonacci_iterative.asm  fibonacci_sum.asm  find_first_set.asm  gcd.asm  gray_code.asm  instruction_test.asm  is_even_odd.asm  is_power_of_2.asm  isqrt.asm  led_pattern.asm  linear_search.asm  matrix_element.asm  max_of_two.asm  memory_copy.asm  min_of_two.asm  (+22 more)
(+144 files in other folders)
